// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`map bacon response 1`] = `
[
  {
    "alcohol": null,
    "barCode": null,
    "caffeine": null,
    "calcium": 13,
    "calories": 500,
    "carbs": 2.1,
    "cholesterol": null,
    "copper": 0.13,
    "fat": 36.5,
    "fiber": null,
    "iron": 1.28,
    "magnesium": 36.5,
    "manganese": 0.02,
    "name": "Pork, cured, bacon, cooked, restaurant",
    "origin": "usda",
    "originId": "749420",
    "phosphorus": 415,
    "potassium": 557,
    "protein": 40.9,
    "saturatedFat": 12.6,
    "selenium": null,
    "servingSize": 100,
    "servingUnit": "g",
    "sodium": 1830,
    "sugar": null,
    "transFat": 0.15,
    "vitaminA": null,
    "vitaminB1": null,
    "vitaminB12": null,
    "vitaminB2": null,
    "vitaminB3": null,
    "vitaminB5": null,
    "vitaminB6": null,
    "vitaminB7": null,
    "vitaminB9": null,
    "vitaminC": null,
    "vitaminD": null,
    "vitaminE": null,
    "vitaminK": null,
    "zinc": 3.56,
  },
]
`;

exports[`map cabbage response 1`] = `
[
  {
    "alcohol": null,
    "barCode": null,
    "caffeine": null,
    "calcium": 41.8,
    "calories": 31.4,
    "carbs": 6.38,
    "cholesterol": null,
    "copper": 0,
    "fat": 0.228,
    "fiber": null,
    "iron": 0.0662,
    "magnesium": 13.9,
    "manganese": 0.248,
    "name": "Cabbage, green, raw",
    "origin": "usda",
    "originId": "2346407",
    "phosphorus": 26.9,
    "potassium": 207,
    "protein": 0.961,
    "saturatedFat": null,
    "selenium": null,
    "servingSize": 100,
    "servingUnit": "g",
    "sodium": 16.1,
    "sugar": null,
    "transFat": null,
    "vitaminA": null,
    "vitaminB1": null,
    "vitaminB12": null,
    "vitaminB2": null,
    "vitaminB3": null,
    "vitaminB5": null,
    "vitaminB6": 0.138,
    "vitaminB7": null,
    "vitaminB9": null,
    "vitaminC": 40.3,
    "vitaminD": null,
    "vitaminE": null,
    "vitaminK": 59.4,
    "zinc": 0.211,
  },
  {
    "alcohol": null,
    "barCode": null,
    "caffeine": null,
    "calcium": 31,
    "calories": 34.1,
    "carbs": 6.79,
    "cholesterol": null,
    "copper": 0.0035,
    "fat": 0.214,
    "fiber": null,
    "iron": 0,
    "magnesium": 13.3,
    "manganese": 0.309,
    "name": "Cabbage, red, raw",
    "origin": "usda",
    "originId": "2346408",
    "phosphorus": 35.8,
    "potassium": 269,
    "protein": 1.24,
    "saturatedFat": null,
    "selenium": null,
    "servingSize": 100,
    "servingUnit": "g",
    "sodium": 11.7,
    "sugar": null,
    "transFat": null,
    "vitaminA": null,
    "vitaminB1": null,
    "vitaminB12": null,
    "vitaminB2": null,
    "vitaminB3": null,
    "vitaminB5": null,
    "vitaminB6": 0.179,
    "vitaminB7": null,
    "vitaminB9": null,
    "vitaminC": 53.9,
    "vitaminD": null,
    "vitaminE": null,
    "vitaminK": 32.3,
    "zinc": 0.245,
  },
  {
    "alcohol": null,
    "barCode": null,
    "caffeine": null,
    "calcium": 61.9,
    "calories": 20.3,
    "carbs": 3.51,
    "cholesterol": null,
    "copper": 0.0276,
    "fat": 0.234,
    "fiber": 1.26,
    "iron": 0.439,
    "magnesium": 13.6,
    "manganese": 0.196,
    "name": "Cabbage, bok choy, raw",
    "origin": "usda",
    "originId": "2685572",
    "phosphorus": 30.5,
    "potassium": 228,
    "protein": 1.02,
    "saturatedFat": null,
    "selenium": null,
    "servingSize": 100,
    "servingUnit": "g",
    "sodium": 14.3,
    "sugar": null,
    "transFat": null,
    "vitaminA": null,
    "vitaminB1": null,
    "vitaminB12": null,
    "vitaminB2": null,
    "vitaminB3": null,
    "vitaminB5": null,
    "vitaminB6": null,
    "vitaminB7": null,
    "vitaminB9": 68,
    "vitaminC": 30.3,
    "vitaminD": null,
    "vitaminE": null,
    "vitaminK": null,
    "zinc": 0.274,
  },
  {
    "alcohol": null,
    "barCode": null,
    "caffeine": null,
    "calcium": 35,
    "calories": 0,
    "carbs": null,
    "cholesterol": null,
    "copper": 0.0238,
    "fat": null,
    "fiber": null,
    "iron": 0.255,
    "magnesium": 11.3,
    "manganese": 0.201,
    "name": "Cabbage, napa, leaf, destemmed, raw",
    "origin": "usda",
    "originId": "2727583",
    "phosphorus": 34.4,
    "potassium": 235,
    "protein": 1.06,
    "saturatedFat": null,
    "selenium": null,
    "servingSize": 100,
    "servingUnit": "g",
    "sodium": 12.6,
    "sugar": null,
    "transFat": null,
    "vitaminA": null,
    "vitaminB1": null,
    "vitaminB12": null,
    "vitaminB2": null,
    "vitaminB3": null,
    "vitaminB5": null,
    "vitaminB6": 0.0856,
    "vitaminB7": 2.72,
    "vitaminB9": null,
    "vitaminC": null,
    "vitaminD": null,
    "vitaminE": null,
    "vitaminK": null,
    "zinc": 0.253,
  },
]
`;

exports[`mapping response 1`] = `
[
  {
    "alcohol": null,
    "barCode": null,
    "caffeine": null,
    "calcium": 61.8,
    "calories": 360,
    "carbs": 62.2,
    "cholesterol": null,
    "copper": 0.838,
    "fat": 1.92,
    "fiber": null,
    "iron": 7.16,
    "magnesium": 107,
    "manganese": 1.57,
    "name": "Lentils, dry",
    "origin": "usda",
    "originId": "2644283",
    "phosphorus": 374,
    "potassium": 949,
    "protein": 23.6,
    "saturatedFat": null,
    "selenium": null,
    "servingSize": 100,
    "servingUnit": "g",
    "sodium": 0,
    "sugar": null,
    "transFat": null,
    "vitaminA": null,
    "vitaminB1": null,
    "vitaminB12": null,
    "vitaminB2": null,
    "vitaminB3": null,
    "vitaminB5": null,
    "vitaminB6": null,
    "vitaminB7": null,
    "vitaminB9": null,
    "vitaminC": null,
    "vitaminD": null,
    "vitaminE": null,
    "vitaminK": null,
    "zinc": 3.86,
  },
]
`;
